fixed footer being stuck to navbar and showing on top of the pages

--- a/static-ui/css/style.css
+++ b/static-ui/css/style.css
@@ -531,3 +531,10 @@ a:focus {
 	}
 
 }
+
+footer {
+	background-color: #333;
+	width: 100%;
+	bottom: 0;
+	position: relative;
+}
